Resource wizard tooltips almost finished.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/WizardStep.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/WizardStep.properties
@@ -82,75 +82,59 @@ SchemaHandlingStep.limitations.tooltip.layers=System layers to which this limita
 SchemaHandlingStep.limitations.tooltip.propertyAccess=The type of access which is allowed or denied.
 SchemaHandlingStep.limitations.tooltip.other=TODO: REMOVE THIS TOOLTIP
 
-SchemaHandlingStep.mapping.tooltip.authoritative=TODO: SchemaHandlingStep.mapping.tooltip.authoritative
-SchemaHandlingStep.mapping.tooltip.exclusive=TODO: SchemaHandlingStep.mapping.tooltip.exclusive
-SchemaHandlingStep.mapping.tooltip.strength=TODO: SchemaHandlingStep.mapping.tooltip.strength
-SchemaHandlingStep.mapping.tooltip.channel=TODO: SchemaHandlingStep.mapping.tooltip.channel
-SchemaHandlingStep.mapping.tooltip.exceptChannel=TODO: SchemaHandlingStep.mapping.tooltip.exceptChannel
-SchemaHandlingStep.mapping.tooltip.source=TODO: SchemaHandlingStep.mapping.tooltip.source
-SchemaHandlingStep.mapping.tooltip.target=TODO: SchemaHandlingStep.mapping.tooltip.target
-SchemaHandlingStep.mapping.tooltip.expressionType=TODO: SchemaHandlingStep.mapping.tooltip.expressionType
-SchemaHandlingStep.mapping.tooltip.expressionLanguage=TODO: SchemaHandlingStep.mapping.tooltip.expressionLanguage
-SchemaHandlingStep.mapping.tooltip.expressionValuePolicyRef=TODO: SchemaHandlingStep.mapping.tooltip.expressionValuePolicyRef
-SchemaHandlingStep.mapping.tooltip.expression=TODO: SchemaHandlingStep.mapping.tooltip.expression
-SchemaHandlingStep.mapping.tooltip.conditionType=TODO: SchemaHandlingStep.mapping.tooltip.conditionType
-SchemaHandlingStep.mapping.tooltip.conditionLanguage=TODO: SchemaHandlingStep.mapping.tooltip.conditionLanguage
-SchemaHandlingStep.mapping.tooltip.conditionValuePolicyRef=TODO: SchemaHandlingStep.mapping.tooltip.conditionValuePolicyRef
-SchemaHandlingStep.mapping.tooltip.condition=TODO: SchemaHandlingStep.mapping.tooltip.condition
+SynchronizationStep.tooltip.kind=Object kind for which this definition applies. If the object (shadow) already has a kind and intent when it is processed by the synchronization code then this kind/intent definition will be used to select the synchronization settings to apply to this object. If the object does not have kind/intent then object class and conditions will be used to select the settings. In such a case the object (shadow) will be marked by the kind specified in this field. 
+SynchronizationStep.tooltip.intent=Object intent for which this definition applies. If the object (shadow) already has a kind and intent when it is processed by the synchronization code then this kind/intent definition will be used to select the synchronization settings to apply to this object. If the object does not have kind/intent then object class and conditions will be used to select the settings. In such a case the object (shadow) will be marked by the intent specified in this field.
+SynchronizationStep.tooltip.objectClass=Object class for which this definition applies. This will be used to select the synchronization settings in case the object (shadow) does not have kind/intent definition yet.
+SynchronizationStep.tooltip.focus=The type of focal object that corresponds to the resource object. For account objects this is usually a user object (UserType). This can be set to RoleType or OrgType for entitlement objects and so on. 
+SynchronizationStep.tooltip.enabled=Set to true if this synchronization setting is enabled. This is the default. This setting can be used to temporarily disable the synchronization setting.
+SynchronizationStep.tooltip.condition=The synchronization setting will be applied only if this condition returns true. The condition is used mostly to sort the object of the same kind into intents. E.g. the condition may decide whether the username starts with "T". If is does then it can sort out accounts to intent "test" and if it does not then the account will have default intent.
+SynchronizationStep.tooltip.correlation=Correlation expression. The correlation expression is used to link focal objects (e.g. User) and shadows (e.g. account) that belong together. The correlation expression results in a search filter that is executed over the focal objects (usually users). The query returns candidate objects for linking. Correlation expression must be very efficient otherwise the synchronization performance will suffer.
+SynchronizationStep.tooltip.confirmation=Confirmation expression. Each result of the correlation expression will be passed to confirmation expression. If the confirmation expression returns true then the objects will be linked. If no confirmation expression is specified then all the objects returned from the correlation query are accepted by default. Confirmation expression may be reasonable resource-intensive because it will be executed only for objects that are returned from the correlation query.
+SynchronizationStep.tooltip.objectTemplate=Object template that will be used to process this specific synchronization event. If no object template is specified here then the usual default will be used.
+SynchronizationStep.tooltip.reconcile=If set to true then the reconciliation step will be forced for this synchronization event. The attributes will be explicitly fetched is they are not present. If set to false then the reconciliation will be automatic. In that case the reconciliation happens only if the attributes are already present in the synchronization event. If the attributes are not present they will not be explicitly fetched and the reconciliation will be skipped.
+SynchronizationStep.tooltip.opportunistic=If set to true then opportunistic synchronization (a.k.a. discovery) will be enabled during the processing of this event.
+SynchronizationStep.tooltip.reaction=Specifies how midPoint reacts to this synchronization event. Several reactions can be specified. The reaction appropriate for the synchronization situation of the event will be selected.
 
-SynchronizationStep.tooltip.kind=TODO: SynchronizationStep.tooltip.kind
-SynchronizationStep.tooltip.intent=TODO: SynchronizationStep.tooltip.intent
-SynchronizationStep.tooltip.objectClass=TODO: SynchronizationStep.tooltip.objectClass
-SynchronizationStep.tooltip.focus=TODO: SynchronizationStep.tooltip.focus
-SynchronizationStep.tooltip.enabled=TODO: SynchronizationStep.tooltip.enabled
-SynchronizationStep.tooltip.condition=TODO: SynchronizationStep.tooltip.condition
-SynchronizationStep.tooltip.confirmation=TODO: SynchronizationStep.tooltip.confirmation
-SynchronizationStep.tooltip.objectTemplate=TODO: SynchronizationStep.tooltip.objectTemplate
-SynchronizationStep.tooltip.reconcile=TODO: SynchronizationStep.tooltip.reconcile
-SynchronizationStep.tooltip.opportunistic=TODO: SynchronizationStep.tooltip.opportunistic
-SynchronizationStep.tooltip.correlation=TODO: SynchronizationStep.tooltip.correlation
-SynchronizationStep.tooltip.reaction=TODO: SynchronizationStep.tooltip.reaction
+SynchronizationStep.reaction.tooltip.situation=Synchronization situation. If the situation of the event matches the situation specified here then the reaction will be applied. It will be ignored otherwise.
+SynchronizationStep.reaction.tooltip.channel=Channel limitation. If the synchronization event originated from the specified channel (e.g. live sync, reconciliation or import) then this reaction will be processed. It will be ignored otherwise.
+SynchronizationStep.reaction.tooltip.synchronize=If set to true then the usual synchronization algorithms will be applied (a.k.a. clockwork and projector) in addition to explicit action specified below. This is the usual case. If set to false then the synchronization algorithms will be skipped and only the explicit action will be executed. 
+SynchronizationStep.reaction.tooltip.reconcile=If set to true then the reconciliation step will be forced for this synchronization event. The attributes will be explicitly fetched is they are not present. If set to false then the reconciliation will be automatic. In that case the reconciliation happens only if the attributes are already present in the synchronization event. If the attributes are not present they will not be explicitly fetched and the reconciliation will be skipped.
+SynchronizationStep.reaction.tooltip.objectTemplateRef=Object template that will be used to process this specific synchronization event. If no object template is specified here then the usual default will be used.
+SynchronizationStep.reaction.tooltip.action=Explicit action. This setting defines what midPoint has to do as a reaction to the synchronization event.
 
-SynchronizationStep.reaction.tooltip.situation=TODO: SynchronizationStep.reaction.tooltip.situation
-SynchronizationStep.reaction.tooltip.channel=TODO: SynchronizationStep.reaction.tooltip.channel
-SynchronizationStep.reaction.tooltip.synchronize=TODO: SynchronizationStep.reaction.tooltip.synchronize
-SynchronizationStep.reaction.tooltip.reconcile=TODO: SynchronizationStep.reaction.tooltip.reconcile
-SynchronizationStep.reaction.tooltip.objectTemplateRef=TODO: SynchronizationStep.reaction.tooltip.objectTemplateRef
-SynchronizationStep.reaction.tooltip.action=TODO: SynchronizationStep.reaction.tooltip.action
+ResourceWizard.expression.tooltip.type=The type of expression. This specifies whether the expression is a script, value generator or something else.
+ResourceWizard.expression.tooltip.language=Programming language in which is the expression script written.
+ResourceWizard.expression.tooltip.policyRef=Reference to a value policy object. The specified value policy will be used as a template to generate a value.
+ResourceWizard.expression.tooltip.expression=The XML representation of the expression. This is the actual expression code that will be interpreted.
 
-ResourceWizard.expression.tooltip.type=TODO: ResourceWizard.expression.tooltip.type
-ResourceWizard.expression.tooltip.language=TODO: ResourceWizard.expression.tooltip.language
-ResourceWizard.expression.tooltip.policyRef=TODO: ResourceWizard.expression.tooltip.policyRef
-ResourceWizard.expression.tooltip.expression=TODO: ResourceWizard.expression.tooltip.expression
+CapabilityStep.capability.read.tooltip=Capability to read data from the resource.
+CapabilityStep.capability.update.tooltip=Capability to update (modify) existing objects on resource.
+CapabilityStep.capability.create.tooltip=Capability to create (add) new objects on resource.
+CapabilityStep.capability.delete.tooltip=Capability to delete existing objects on resource.
+CapabilityStep.capability.liveSync.tooltip=Live synchronization capability. Ability to efficiently fetch data changes in almost-real-time.
+CapabilityStep.capability.testConnection.tooltip=Capability to test connection to the resource.
+CapabilityStep.capability.activation.tooltip=Activation capability. Ability to enable/disable accounts, set validity dates, etc.
+CapabilityStep.capability.credentials.tooltip=Capability to set credentials for resource accounts.
+CapabilityStep.capability.script.tooltip=Capability to execute scripts on connector and resource.
 
-CapabilityStep.capability.read.tooltip=TODO: CapabilityStep.capability.read.tooltip
-CapabilityStep.capability.update.tooltip=TODO: CapabilityStep.capability.update.tooltip
-CapabilityStep.capability.create.tooltip=TODO: CapabilityStep.capability.create.tooltip
-CapabilityStep.capability.delete.tooltip=TODO: CapabilityStep.capability.delete.tooltip
-CapabilityStep.capability.liveSync.tooltip=TODO: CapabilityStep.capability.liveSync.tooltip
-CapabilityStep.capability.testConnection.tooltip=TODO: CapabilityStep.capability.testConnection.tooltip
-CapabilityStep.capability.activation.tooltip=TODO: CapabilityStep.capability.activation.tooltip
-CapabilityStep.capability.credentials.tooltip=TODO: CapabilityStep.capability.credentials.tooltip
-CapabilityStep.capability.script.tooltip=TODO: CapabilityStep.capability.script.tooltip
+CapabilityStep.activation.tooltip.enabled=True if this capability is active. False if it is disabled. Disabled capability acts in the same way as if it was not there. Capabilities can be disabled e.g. to work around connector bugs, to make resource read-only, etc.
+CapabilityStep.activation.tooltip.returnedByDefault=If true then the activation attribute is returned with resource objects by default and it does not need to be requested. If false then the activation attribute has to be explicitly requested.
+CapabilityStep.activation.tooltip.ignoreAttribute=If set to true then the attribute which is used for simulated activation will be mark as ignored in the schema. I.e. midPoint will pretend that this attribute does not exist and only use the standard administrativeStatus. This is the default. If set to false then the attribute will also be visible in the schema and both the administrativeStatus and the original attribute will work. This may be needed if the attribute has a richer set of states than the administrativeStatus attribute. But in this case beware of value conflicts between administrativeStatus and the original attribute.
+CapabilityStep.activation.tooltip.attributeName=Name of the attribute that contains a value for simulated administrativeStatus. This is usually an attribute that contains some kind of enabled/disabled information. Typical examples are attributes such as "enabled", "ds-pwp-account-disabled", "accountStatus", etc.
+CapabilityStep.activation.tooltip.enableList=List of attribute values that represent the "enabled" state. If any of these values are present in the attribute then the object will be considered to be enabled. Typical values are "true", "ENABLED", "1" and so on.
+CapabilityStep.activation.tooltip.disableList=List of attribute values that represent the "disabled" state. If any of these values are present in the attribute then the object will be considered to be disabled. Typical values are "false", "disabled", "0" or empty value.
+CapabilityStep.activation.tooltip.validFromEnabled=True if the resource supports validFrom activation property.
+CapabilityStep.activation.tooltip.validFromReturned=True of the validFrom property is returned by default. False if it needs to be explicitly requested.
+CapabilityStep.activation.tooltip.validToEnabled=True if the resource supports validTo activation property
+CapabilityStep.activation.tooltip.validToReturned=True of the validFrom property is returned by default. False if it needs to be explicitly requested.
 
-CapabilityStep.activation.tooltip.enabled=TODO: CapabilityStep.activation.tooltip.enabled
-CapabilityStep.activation.tooltip.returnedByDefault=TODO: CapabilityStep.activation.tooltip.returnedByDefault
-CapabilityStep.activation.tooltip.ignoreAttribute=TODO: CapabilityStep.activation.tooltip.ignoreAttribute
-CapabilityStep.activation.tooltip.attributeName=TODO: CapabilityStep.activation.tooltip.attributeName
-CapabilityStep.activation.tooltip.enableList=TODO: CapabilityStep.activation.tooltip.enableList
-CapabilityStep.activation.tooltip.disableList=TODO: CapabilityStep.activation.tooltip.disableList
-CapabilityStep.activation.tooltip.validFromEnabled=TODO: CapabilityStep.activation.tooltip.validFromEnabled
-CapabilityStep.activation.tooltip.validFromReturned=TODO: CapabilityStep.activation.tooltip.validFromReturned
-CapabilityStep.activation.tooltip.validToEnabled=TODO: CapabilityStep.activation.tooltip.validToEnabled
-CapabilityStep.activation.tooltip.validToReturned=TODO: CapabilityStep.activation.tooltip.validToReturned
+CapabilityStep.script.tooltip.enabled=True if this capability is active. False if it is disabled. Disabled capability acts in the same way as if it was not there. Capabilities can be disabled e.g. to work around connector bugs, to make resource read-only, etc.
+CapabilityStep.script.tooltip.onConnector=Capability to execute scripts "on connector". This means that the scripts will be executed on the machine where the connector is installed. This is usually midPoint node or a connector server.
+CapabilityStep.script.tooltip.onResource=Capability to execute scripts "on resource". This means that the scripts will be executed on the machine where the connector connects. This is usually the server that hosts the resource (AD server, remote Unix machine, database server, etc.)
 
-CapabilityStep.script.tooltip.enabled=TODO: CapabilityStep.script.tooltip.enabled
-CapabilityStep.script.tooltip.onConnector=TODO: CapabilityStep.script.tooltip.onConnector
-CapabilityStep.script.tooltip.onResource=TODO: CapabilityStep.script.tooltip.onResource
-
-CapabilityStep.credentials.tooltip.enabled=TODO: CapabilityStep.credentials.tooltip.enabled
-CapabilityStep.credentials.tooltip.passEnabled=TODO: CapabilityStep.credentials.tooltip.passEnabled
-CapabilityStep.credentials.tooltip.passReturned=TODO: CapabilityStep.credentials.tooltip.passReturned
+CapabilityStep.credentials.tooltip.enabled=True if this capability is active. False if it is disabled. Disabled capability acts in the same way as if it was not there. Capabilities can be disabled e.g. to work around connector bugs, to make resource read-only, etc.
+CapabilityStep.credentials.tooltip.passEnabled=True if the resource supports password credentials.
+CapabilityStep.credentials.tooltip.passReturned=True of the password is returned by default. False if it needs to be explicitly requested.
 
 QNameEditor.tooltip.attribute=TODO: QNameEditor.tooltip.attribute
 QNameEditor.tooltip.namespace=TODO: QNameEditor.tooltip.namespace
