--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceAssociationEditor.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceAssociationEditor.properties
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2010-2013 Evolveum
+# Copyright (c) 2010-2014 Evolveum
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -31,12 +31,12 @@ ResourceAssociationEditor.label.description=Description
 ResourceAssociationEditor.label.limitations=Limitations
 ResourceAssociationEditor.label.exclusiveStrong=Exclusive strong
 ResourceAssociationEditor.label.tolerant=Tolerant
-ResourceAssociationEditor.label.tolerantVP=Tolerant VP
-ResourceAssociationEditor.label.intolerantVP=Intolerant VP
+ResourceAssociationEditor.label.tolerantVP=Tolerant pattern
+ResourceAssociationEditor.label.intolerantVP=Intolerant pattern
 ResourceAssociationEditor.label.fetchStrategy=Fetch Strategy
 ResourceAssociationEditor.label.matchingRule=Matching rule
-ResourceAssociationEditor.label.outbound=Outbound
-ResourceAssociationEditor.label.inbound=Inbound
+ResourceAssociationEditor.label.outbound=Outbound mapping
+ResourceAssociationEditor.label.inbound=Inbound mapping
 ResourceAssociationEditor.message.cantParseSchema=Couldn't parse resource schema
 
 AttributeFetchStrategyType.IMPLICIT=Implicit
