--- a/model/report-impl/pom.xml
+++ b/model/report-impl/pom.xml
@@ -63,6 +63,11 @@
 			<artifactId>model-common</artifactId>
 			<version>3.1-SNAPSHOT</version>
 		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>com.evolveum.midpoint.model</groupId> -->
+<!-- 			<artifactId>model-client</artifactId> -->
+<!-- 			<version>3.1-SNAPSHOT</version> -->
+<!-- 		</dependency> -->
 
  		<!-- Jasper reports -->
 <!--         <dependency> -->
@@ -73,9 +78,19 @@
 <dependency>
 	<groupId>net.sf.jasperreports</groupId>
 	<artifactId>jasperreports</artifactId>
-	<version>5.6.1</version>
+	<version>6.0.0</version>
 </dependency>
+<!-- <dependency> -->
+<!-- 	<groupId>com.google.code.maven-play-plugin.org.apache.commons</groupId> -->
+<!-- 	<artifactId>commons-javaflow</artifactId> -->
+<!-- 	<version>1590792</version> -->
+<!-- </dependency> -->
 
+<dependency>
+	<groupId>commons-javaflow</groupId>
+	<artifactId>commons-javaflow</artifactId>
+	<version>20060411</version>
+</dependency>
   		<dependency>
    			<groupId>org.hibernate</groupId>
    			<artifactId>hibernate-core</artifactId>
