MID-2094 implementation. It is now possible to add/edit/delete multiple mail server configurations from UI.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/SystemConfigPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/SystemConfigPanel.properties
@@ -27,13 +27,18 @@ SystemConfigPanel.cleanupPolicy.closedTasks=Closed tasks cleanup interval
 SystemConfigPanel.cleanupPolicy.placeholder=Insert interval
 SystemConfigPanel.mail.defaultFrom=Default from
 SystemConfigPanel.mail.debug=Debug
+SystemConfigPanel.mail.server=Mail Server
+SystemConfigPanel.mail.server.tooltip=Select the mail server to configure it. To add new configuration, press '+' button. To remove selected configuration, press '-' button.
+SystemConfigPanel.mail.server.remove.warn=Could not delete selected mail server configuration. Changes made to selected configuration prevent the removal. Please re-select the configuration you wish to remove.
 SystemConfigPanel.mail.host=Host
 SystemConfigPanel.mail.port=Port
 SystemConfigPanel.mail.username=Username
 SystemConfigPanel.mail.password=Password
 SystemConfigPanel.mail.password.placeholder.empty=Set password
 SystemConfigPanel.mail.password.placeholder.set=Password is set
+SystemConfigPanel.mail.config.placeholder=New Configuration
 SystemConfigPanel.mail.transportSecurity=Transport security
 SystemConfigPanel.notification.redirectToFile=Redirect to file
 SystemConfigPanel.notification.redirectToFile.placeholder=Filename
 SystemConfigPanel.tooltip.duration=Format: P[n][p], n-number, p-period (d - days, m - months, ...), P3M - cleanup every 3 months
+mainForm.mailServer.nullValid=Choose One
