--- a/gui/admin-gui/pom.xml
+++ b/gui/admin-gui/pom.xml
@@ -208,7 +208,7 @@
 
         <!-- JDBC DRIVERS -->
         <dependency>
-            <groupId>postgresql</groupId>
+            <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
         </dependency>
 
