--- a/tools/repo-ninja/pom.xml
+++ b/tools/repo-ninja/pom.xml
@@ -75,7 +75,7 @@
 
         <!-- JDBC DRIVERS -->
         <dependency>
-            <groupId>postgresql</groupId>
+            <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
         </dependency>
     </dependencies>
