--- a/repo/repo-sql-impl-test/sample-configurations/mysql.properties
+++ b/repo/repo-sql-impl-test/sample-configurations/mysql.properties
@@ -16,7 +16,7 @@
 
 embedded=false
 driverClassName=com.mysql.jdbc.Driver
-hibernateHbm2ddl=update
+hibernateHbm2ddl=validate
 hibernateDialect=com.evolveum.midpoint.repo.sql.util.MidPointMySQLDialect
 jdbcUsername=midpoint
 jdbcPassword=qwe123
