Implemented MID-1571 (reevaluation of search filters).

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageDebugView.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageDebugView.properties
@@ -22,5 +22,6 @@ pageDebugView.edit=Edit
 pageDebugView.encrypt=Protected by encryption
 pageDebugView.validateSchema=Validate schema
 pageDebugView.saveAsRaw=Save in raw mode
+pageDebugView.reevaluateSearchFilters=Reevaluate search filters
 pageDebugView.message.cantSaveEmpty=Can't save empty xml.
 pageDebugView.message.oidNotDefined=Object oid is not defined.
