Fixed counting of failed login attempts. Preliminary implementation of unlocking (MID-1038).

--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/security/MidPointApplication_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/security/MidPointApplication_sk_SK.utf8.properties
@@ -430,7 +430,7 @@ web.security.provider.access.denied=Access denied. You don't have permission to 
 web.security.provider.denied=Permission denied.
 web.security.provider.disabled=Používateľ je zablokovaný.
 web.security.provider.invalid=Nesprávne meno a/alebo heslo.
-web.security.provider.locked=Používateľ je zablokovaný, prosím počkajte {0,number,integer} minút.
+web.security.provider.locked=Používateľ je zablokovaný, prosím počkajte.
 web.security.provider.password.bad=Používateľ nemá definované heslo.
 web.security.provider.password.encoding=Nepodarilo sa autentifikovat používateľa, dôvod\: nepodarilo sa dekódovať heslo.
 web.security.provider.unavailable=Momentálne nie je možné spracovať Vašu požiadavku. Skúste prosím neskôr.
