--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/PageUsers.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/PageUsers.properties
@@ -21,6 +21,7 @@ SearchType.GIVEN_NAME=Given name
 SearchType.FAMILY_NAME=Family name
 SearchType.FULL_NAME=Full name
 pageUsers.message.queryError=Error occurred during translation search query to filter.
+pageUsers.menu.unlock=Unlock
 pageUsers.menu.reconcile=Reconcile
 pageUsers.menu.delete=Delete
 pageUsers.menu.disable=Disable
