--- a/build-system/pom.xml
+++ b/build-system/pom.xml
@@ -388,7 +388,7 @@
             <dependency>
                 <groupId>com.evolveum.polygon</groupId>
                 <artifactId>connector-csvfile</artifactId>
-                <version>1.4.0.1-SNAPSHOT</version>
+                <version>1.4.0.49</version>
             </dependency>
             <dependency>
                 <groupId>com.evolveum.polygon</groupId>
