--- a/build-system/pom.xml
+++ b/build-system/pom.xml
@@ -56,7 +56,7 @@
         <mockito.version>1.10.8</mockito.version>
         <quartz.version>2.1.3</quartz.version>
         <selenium.version>1.0.1</selenium.version>
-        <slf4j.version>1.6.4</slf4j.version>
+        <slf4j.version>1.7.7</slf4j.version>
         <spring.version>4.0.6.RELEASE</spring.version>
         <spring.security.version>3.2.5.RELEASE</spring.security.version>
         <testng.version>6.8.8</testng.version>
@@ -72,7 +72,7 @@
         <activiti-spring.version>5.15.1</activiti-spring.version>
         <commons-email.version>1.3</commons-email.version>
         <xmlsec.version>2.0.1</xmlsec.version>
-        <connid.version>1.4.0.49</connid.version>
+        <connid.version>1.4.1.0-SNAPSHOT</connid.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -393,7 +393,7 @@
             <dependency>
                 <groupId>com.evolveum.polygon</groupId>
                 <artifactId>connector-ldap</artifactId>
-                <version>1.4.0.49</version>
+                <version>1.4.1.0-SNAPSHOT</version>
             </dependency>
             <!-- End connectors -->
             <dependency>
