fixing activation handling in resource wizard

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceActivationEditor.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceActivationEditor.properties
@@ -23,3 +23,7 @@ ResourceActivationEditor.label.outbound=Outbound
 ResourceActivationEditor.label.inbound=Inbound
 AttributeFetchStrategyType.IMPLICIT=Implicit
 AttributeFetchStrategyType.EXPLICIT=Explicit
+existenceFetchStrategy.nullValid=Choose One
+admStatusFetchStrategy.nullValid=Choose One
+validFromFetchStrategy.nullValid=Choose One
+validToFetchStrategy.nullValid=Choose One
