Ability to reset artificially set midPoint time in Internals config

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageInternals.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageInternals.properties
@@ -16,6 +16,7 @@
 page.title=Internals configuration
 PageInternals.offset=Offset
 PageInternals.button.changeTime=Change time
+PageInternals.button.resetTimeChange=Reset to using system time
 PageInternals.title.internalsConfig=Internals config
 PageInternals.title.debugUtil=Debug util
 PageInternals.title.timeChange=Time change
