--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -463,6 +463,7 @@ operation.com.evolveum.midpoint.web.page.admin.configuration.PageImportObject.im
 operation.com.evolveum.midpoint.web.page.admin.configuration.PageLogging.loadLoggingConfiguration=Load logging configuration (Gui)
 operation.com.evolveum.midpoint.web.page.admin.configuration.PageLogging.updateLoggingConfiguration=Update logging configuration (Gui)
 operation.com.evolveum.midpoint.web.page.admin.configuration.PageInternals.changeTime=Change time (Gui)
+operation.com.evolveum.midpoint.web.page.admin.configuration.PageInternals.changeTimeReset=Change time - reset (Gui)
 
 LoggingComponentType.ALL=All
 LoggingComponentType.MODEL=Model logger
