--- a/build-system/pom.xml
+++ b/build-system/pom.xml
@@ -773,6 +773,40 @@
                             <onlyAnalyze>com.evolveum.midpoint.*</onlyAnalyze>
                         </configuration>
                     </plugin>
+            <!--         <plugin>
+					    <groupId>org.apache.maven.plugins</groupId>
+					    <artifactId>maven-enforcer-plugin</artifactId>
+					    <version>1.3.1</version>
+					    <executions>
+					      <execution>
+					        <id>enforce</id>
+					        <configuration>
+					          <rules>
+					            <DependencyConvergence />
+					          </rules>
+					        </configuration>
+					        <goals>
+					          <goal>enforce</goal>
+					        </goals>
+					      </execution>
+					    </executions>
+					  </plugin>
+                    <plugin>
+				        <groupId>org.apache.maven.plugins</groupId>
+				        <artifactId>maven-dependency-plugin</artifactId>
+				        <version>2.10</version>
+				        <executions>
+				          <execution>
+				            <id>analyze</id>
+				            <goals>
+				              <goal>analyze-only</goal>
+				            </goals>
+				            <configuration>
+				              <failOnWarning>false</failOnWarning>
+				            </configuration>
+				          </execution>
+				        </executions>
+				      </plugin>   -->
                 </plugins>
             </build>
             <reporting>
