adding warning, that deprecated part of schema (action ref in sync reaction) is not supported in resource wizard (MID-2183)

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/SynchronizationStep.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/SynchronizationStep.properties
@@ -44,6 +44,8 @@ SynchronizationStep.message.errorLoadingObjectSyncList=Couldn't load object sync
 SynchronizationStep.message.errorLoadingObjectTemplates=Couldn't load object templates from repository.
 SynchronizationStep.message.cantSave=Couldn't save resource synchronization.
 
+SynchronizationStep.message.unsupportedActionFormat=You are using deprecated attribute 'ref' to define reaction action. Use element 'handlerUri' instead. Actions with 'ref' attribute will not be shown in this wizard.
+
 objectSyncConfig.editorKind.nullValid=Choose One
 objectSyncConfig.editorFocus.nullValid=Choose One
 objectSyncConfig.editorObjectTemplate.nullValid=Choose One
