Button label fix

--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/workflow/PageWorkItem_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/workflow/PageWorkItem_sk_SK.utf8.properties
@@ -8,10 +8,10 @@ pageWorkItem.accordionLabel.requester=Requester (detailed)
 pageWorkItem.additionalData.description=Role to be added
 pageWorkItem.additionalInfo=Supplementary information (do not edit)
 pageWorkItem.assignee=Assigned to\:
-pageWorkItem.button.approve=Schváliť (neimpl)
+pageWorkItem.button.approve=Schváliť
 pageWorkItem.button.cancel=Zrušiť
 pageWorkItem.button.claim=Claim
-pageWorkItem.button.reject=Zamietnuť (neimpl)
+pageWorkItem.button.reject=Zamietnuť
 pageWorkItem.button.release=Release
 pageWorkItem.candidates=Candidate assignees\:
 pageWorkItem.delta=Delta to be approved
