fix for MID-2189 - issue 1 - reload achema operation on Schema Step.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/SchemaStep.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/SchemaStep.properties
@@ -17,4 +17,6 @@ WizardStep.title=Schema
 SchemaStep.xml=Xml
 SchemaStep.schema=Schema
 SchemaStep.button.reload=Reload
+SchemaStep.message.reload.ok=Schema for resource '{0}' was reloaded successfully.
+SchemaStep.message.reload.fail=Schema for resource '{0}' was not reloaded.
 
