--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/resources/PageResources.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/resources/PageResources.properties
@@ -34,6 +34,7 @@ pageResources.inlineMenuItem.deleteSyncToken=Delete Sync. Token
 pageResources.inlineMenuItem.editResource=Edit Resource
 pageResources.button.discoveryRemote=Discovery
 pageResources.button.search=Search
+pageResources.button.editAsXml=Edit XML
 pageResources.searchText.placeholder=Name
 
 pageResources.message.deleteResourceConfirm=Do you really want to delete resource '{0}'?
