--- a/gui/admin-gui/pom.xml
+++ b/gui/admin-gui/pom.xml
@@ -549,6 +549,23 @@
             <artifactId>servlet-api</artifactId>
             <scope>provided</scope>
         </dependency>
+		
+		<!-- SSO CAS Client dependencies -->
+		<dependency>
+			<groupId>org.jasig.cas.client</groupId>
+			<artifactId>cas-client-integration-tomcat-v7</artifactId>
+			<version>3.3.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jasig.cas.client</groupId>
+			<artifactId>cas-client-core</artifactId>
+			<version>3.3.3</version>
+		</dependency>
+		 <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-cas</artifactId>
+			<version>3.2.5.RELEASE</version>
+        </dependency>
         
         <!-- testing dependencies -->
         <dependency>
