disabling CAS SSO integration (by default use standard authentication)

--- a/gui/admin-gui/src/main/webapp/WEB-INF/web.xml
+++ b/gui/admin-gui/src/main/webapp/WEB-INF/web.xml
@@ -66,7 +66,8 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
-	
+	<!-- For CAS SLO integration uncomment following -->
+<!--
 	 <filter>
     <filter-name>characterEncodingFilter</filter-name>
     <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -82,7 +83,7 @@
   <listener>
     <listener-class>org.jasig.cas.client.session.SingleSignOutHttpSessionListener</listener-class>
   </listener>
-	
+	-->
     <filter>
         <filter-name>wicket</filter-name>
         <filter-class>org.apache.wicket.protocol.http.WicketFilter</filter-class>
