--- a/gui/admin-gui/pom.xml
+++ b/gui/admin-gui/pom.xml
@@ -550,8 +550,9 @@
             <scope>provided</scope>
         </dependency>
 		
+		<!-- Uncomment following if you want midpoint to be a part of SSO using CAS server-->
 		<!-- SSO CAS Client dependencies -->
-		<dependency>
+	<!--	<dependency>
 			<groupId>org.jasig.cas.client</groupId>
 			<artifactId>cas-client-integration-tomcat-v7</artifactId>
 			<version>3.3.3</version>
@@ -560,12 +561,26 @@
 			<groupId>org.jasig.cas.client</groupId>
 			<artifactId>cas-client-core</artifactId>
 			<version>3.3.3</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>xercesImpl</artifactId>
+					<groupId>xerces</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>xmltooling</artifactId>
+					<groupId>org.opensaml</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>velocity</artifactId>
+					<groupId>velocity</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		 <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-cas</artifactId>
 			<version>3.2.5.RELEASE</version>
-        </dependency>
+        </dependency>  -->
         
         <!-- testing dependencies -->
         <dependency>
