Configurable treatment of undeclared prefixes (MID-2191). Temporarily fixing missing XMLNS declarations when serializing RawTypes (MID-2196).

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageInternals.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageInternals.properties
@@ -23,6 +23,7 @@ PageInternals.title.timeChange=Time change
 PageInternals.checkConsistency=Check consistency
 PageInternals.checkEncryption=Check encryption
 PageInternals.checkReadEncrypion=Check read encryption
+PageInternals.tolerateUndeclaredPrefixes=Tolerate undeclared prefixes in QNames and paths
 PageInternals.detailedDebugDump=Detailed debug dump
 
 
