report data source impelentation. small refactor for report task handler..

--- a/build-system/pom.xml
+++ b/build-system/pom.xml
@@ -551,6 +551,14 @@
                 <artifactId>velocity</artifactId>
                 <version>1.7</version>
             </dependency>
+            
+            <!-- report dependency (needed for microsoft office formats) -->
+            <dependency>
+				<groupId>org.apache.poi</groupId>
+				<artifactId>poi</artifactId>
+				<version>3.10.1</version>
+			</dependency>
+			            
         </dependencies>
     </dependencyManagement>
 
