--- a/gui/admin-gui/pom.xml
+++ b/gui/admin-gui/pom.xml
@@ -534,6 +534,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<!-- report dependency (needed for microsoft office formats) -->
+            <dependency>
+				<groupId>org.apache.poi</groupId>
+				<artifactId>poi</artifactId>
+				<version>3.10.1</version>
+			</dependency>
 		<dependency>
 	<groupId>commons-javaflow</groupId>
 	<artifactId>commons-javaflow</artifactId>
