--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -46,6 +46,7 @@ ObjectTypeGuiDescriptor.focus=Focus
 ObjectTypeGuiDescriptor.report=Report
 ObjectTypeGuiDescriptor.reportOutput=Report output
 ObjectTypeGuiDescriptor.securityPolicy=Security policy
+ObjectTypeGuiDescriptor.orgManager=Org. manager
 
 SynchronizationPolicyDecision.ADD=Add
 SynchronizationPolicyDecision.DELETE=Delete
