TreeTablePanel rework - adding separate tables for child org. units, managers and members of org.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/TreeTablePanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/TreeTablePanel.properties
@@ -15,6 +15,9 @@
 #
 
 TreeTablePanel.hierarchy=Org. hierarchy
+TreeTablePanel.childOrg=Children org. units
+TreeTablePanel.members=Members
+TreeTablePanel.managers=Managers
 TreeTablePanel.menu.addOrgUnit=Add org. unit
 TreeTablePanel.menu.addUser=Add user
 TreeTablePanel.menu.delete=Delete
