Certification - first steps.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/PageAdmin.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/PageAdmin.properties
@@ -30,6 +30,8 @@ pageAdmin.serverTasks=Server Tasks
 pageAdmin.serverTasks.description=Running tasks
 pageAdmin.workItems=Work Items
 pageAdmin.workItems.description=Requests, approving
+pageAdmin.certification=Certification
+pageAdmin.certification.description=Certifications, recertifications
 
 #pageAdmin.users.importFromXml=Import from XML
 #pageAdmin.users.importFromFile=Import from file
@@ -103,6 +105,9 @@ PageAdmin.menu.top.serverTasks.new=New task
 PageAdmin.menu.top.reports=Reports
 PageAdmin.menu.top.reports.list=Reports
 PageAdmin.menu.top.reports.created=Created reports
+PageAdmin.menu.top.certification=Certification
+PageAdmin.menu.top.certification.types=Certification types
+PageAdmin.menu.top.certification.current=Currently-run certifications
 PageAdmin.menu.top.configuration=Configuration
 PageAdmin.menu.top.configuration.bulkActions=Bulk actions
 PageAdmin.menu.top.configuration.importObject=Import object
