--- a/model/pom.xml
+++ b/model/pom.xml
@@ -59,5 +59,7 @@
         <module>notifications-impl</module>
         <module>report-api</module>
         <module>report-impl</module>
+        <module>certification-api</module>
+        <module>certification-impl</module>
     </modules>
 </project>
