--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -47,6 +47,9 @@ ObjectTypeGuiDescriptor.report=Report
 ObjectTypeGuiDescriptor.reportOutput=Report output
 ObjectTypeGuiDescriptor.securityPolicy=Security policy
 ObjectTypeGuiDescriptor.orgManager=Org. manager
+ObjectTypeGuiDescriptor.lookupTable=Lookup table
+ObjectTypeGuiDescriptor.accessCertificationType=Access certification type
+ObjectTypeGuiDescriptor.accessCertificationRun=Access certification run
 
 SynchronizationPolicyDecision.ADD=Add
 SynchronizationPolicyDecision.DELETE=Delete
